--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - checkout
       - run: mvn install
       - run: mvn test
+      - run: mvn jacoco:report-aggregate
       - run: "bash <(curl -s https://codecov.io/bash)"
       - save_cache:
           paths:
