--- a/restaurant-service/src/main/resources/application.yml
+++ b/restaurant-service/src/main/resources/application.yml
@@ -4,6 +4,22 @@ spring:
 server:
   port: 8080
 
+# Discovery Server Access
+eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 3
+    leaseExpirationDurationInSeconds: 2
+    metadataMap:
+      instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+
+  client:
+    registryFetchIntervalSeconds: 5
+    instanceInfoReplicationIntervalSeconds: 5
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    serviceUrl:
+      defaultZone: ${vcap.services.${PREFIX:}eureka.credentials.uri:http://user:password@localhost:8761}/eureka/
+    fetchRegistry: true
+
 ---
 spring:
   profiles: dev
@@ -19,3 +35,26 @@ spring:
     name: restaurant-service
 server:
   port: 4431
+
+---
+spring:
+  profiles: docker
+  application:
+    name: restaurant-service
+server:
+  port: 4431
+
+eureka:
+  instance:
+    preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
+  client:
+    registryFetchIntervalSeconds: 5
+    instanceInfoReplicationIntervalSeconds: 5
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
+      fetchRegistry: true
+      healthcheck:
+        enabled: true
