--- a/restaurant-service/pom.xml
+++ b/restaurant-service/pom.xml
@@ -13,9 +13,12 @@
     <groupId>com.estiasi.restaurant</groupId>
     <artifactId>restaurant-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.estiasi.common</groupId>
             <artifactId>common</artifactId>
@@ -41,10 +44,6 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
