--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -2,43 +2,36 @@ server:
   port: 8080
 
 spring:
-    application:
-      name: gateway-server
-
----
-spring:
-  profiles: dev
+  application:
+    name: gateway-server
   cloud:
     gateway:
       routes:
         - id: restaurant-service
-          uri: http://localhost:8081/
+          uri: lb://RESTAURANT-SERVICE
           predicates:
             - Path=/v1/restaurants/**
         - id: user-service
-          uri: http://localhost:8082/
+          uri: lb://USER-SERVICE
           predicates:
             - Path=/v1/users/**
         - id: booking-service
-          uri: http://localhost:8083/
+          uri: lb://BOOKING-SERVICE
           predicates:
             - Path=/v1/bookings/**
+
+---
+sprint:
+  profiles: dev
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${vcap.services.${PREFIX:}eureka.credentials.uri:http://user:password@localhost:8761}/eureka/
 
 ---
 spring:
   profiles: docker
-  cloud:
-    gateway:
-      routes:
-        - id: restaurant-service
-          uri: http://restaurant:4431/
-          predicates:
-            - Path=/v1/restaurants/**
-        - id: user-service
-          uri: http://user:8082/
-          predicates:
-            - Path=/v1/users/**
-        - id: booking-service
-          uri: http://booking:8082/
-          predicates:
-            - Path=/v1/bookings/**
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
