--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       MAVEN_OPTS: -Xmx4200m
     steps:
       - checkout
-      - run: mvn -pl gateway-server -am clean install
+      - run: mvn clean install
       - run: mvn jacoco:report-aggregate
       - run: "bash <(curl -s https://codecov.io/bash)"
       - save_cache:
