--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,14 @@ jobs:
     docker:
       - image: circleci/openjdk:8u181-jdk
     environment:
-      MAVEN_OPTS: -Xmx4200m
+      _JAVA_OPTIONS: "-Xmx3g"
     steps:
       - checkout
       - restore_cache:
           keys:
             - v1-dependencies-
+      - run: ls -la ~/.m2/repository/
+      - run: pwd
       - run: mvn -pl gateway-server -am clean install
       - save_cache:
           paths:
