--- a/restaurant-service/src/main/resources/application.yml
+++ b/restaurant-service/src/main/resources/application.yml
@@ -13,6 +13,18 @@ eureka:
       defaultZone: ${vcap.services.${PREFIX:}eureka.credentials.uri:http://user:password@localhost:8761}/eureka/
 
 ---
+sprint:
+  profiles: test
+  datasource:
+    url: jdbc:h2:mem:estiasi
+    driverClassName: org.h2.Driver
+    usernname: root
+    password:
+eureka:
+  client:
+    enabled: false
+
+---
 spring:
   profiles: dev
   datasource:
